--- a/public/style.css
+++ b/public/style.css
@@ -1,104 +1,72 @@
-                        /* Global */
-/*/////////////////////////////////////////////////////////////////////////////*/
-html{
-    height: 100%;
+/**
+*   feuille CSS du thème du site
+*/
+
+
+/**
+*   ici, on modifie le thème boostrap
+*/
+.bg-primary{
+    background-color: rgb(239, 119, 87) !important; /*Couleur du CEREMA*/
 }
+.btn-info{
+    background-color: rgb(255, 154, 128) !important; /*Dérivé du CEREMA*/
+    border-color: #ffbcab !important; /*Dérivé du CEREMA*/
+}
+.btn-success{
+    background-color: #8ec641 !important; /*Couleur du MIIAM*/
+    border-color: #B0E469 !important; /*Dérivé du MIIAM*/
+}
+.btn {
+	border-radius: 10px 0 10px 0;
+	border: 1px;
+	box-shadow: 0 0 0 rgba(0,0,0,0.3);
+	transition: 0.3s ease-out all;
+    margin: auto;
+}
+.btn:hover {
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.7);
+}
+
+
+/**
+*   Ici, c'est nos classes, et les balises HTML, par ordre d'apparition dans notre thème
+*/
 body{
-    height: 100%;
     width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction : column;
 }
-
-
-                        /* header */
-/*/////////////////////////////////////////////////////////////////////////////*/
-header {
+header{
+    border-bottom: 2px solid black;
     display: flex;
-    flex-direction : column;
+    flex-direction: column;
+    width: 100%;
 }
-
-
-                        /* main */
-/*/////////////////////////////////////////////////////////////////////////////*/
-main{
-    display: flex;
-    flex: 1;
-    flex-direction : column;    
-    background-color: #B2ECF1;
-
-}
-
-
-                        /* logotype du site */
-/*/////////////////////////////////////////////////////////////////////////////*/
-.logotype{
-    width: 140px !important;    
+.logo{
+    height: 50px;
     margin: 0 !important;
     padding: 0 !important;
 }
 
-
-                        /* image de logotype */
-/*/////////////////////////////////////////////////////////////////////////////*/                    
-.logotype img{
-    width: 120px;    
-}
-
-.logotype img:hover{
-    /*background-color: black;*/
-   
+.logo:hover{
     padding-left: 15px;
-    transform: scale(1.5);   
-    position: absolute;   
+    transform: scale(1.5);
 }
 
-
-                        /* nav-bar */
-/*/////////////////////////////////////////////////////////////////////////////*/
-.bg-primary{
-   /* background-color: #ef7757!important;*/
-    background: linear-gradient(#ef7757, #ffbcab);
+main{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex: 1;
 }
-
-
-                        /* Bouton de debut dans la navbar */
-/*/////////////////////////////////////////////////////////////////////////////*/                     
-.debut-nav{
-    order: 0;
-}
-
-                        /* Bouton a la fin dans la navbar */
-/*/////////////////////////////////////////////////////////////////////////////*/
-.fin-nav{
-    order: 1;
-}
-
-
-                        /* L'Icone d'utilisateur */
-/*/////////////////////////////////////////////////////////////////////////////*/
-.userIcon{
-    color: rgb(178, 236, 241);     
-}
-
-
-                        /* 	Pseudo d'utilisateur */
-/*/////////////////////////////////////////////////////////////////////////////*/
-.userIcon p{
-    color: black;
-    font-size: 16px;    
-}
-
-
-                        /* Footer */
-/*/////////////////////////////////////////////////////////////////////////////*/
 footer {
     width: 100vw;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
 }
-
 footer>div{
     display: flex;
     min-width:50vw;
@@ -106,71 +74,67 @@ footer>div{
     max-width: 100vw;
     justify-content: space-between;
 }
-
-
-                        /* Footer Logotype Cerema */
-/*/////////////////////////////////////////////////////////////////////////////*/
-footer a:nth-of-type(2) img {
-    width: 200px;
-    height: 130px;     
+figure img:nth-child(1){
+    height: 130px;
 }
-                        /* Footer Logotype MIIAM */
-/*/////////////////////////////////////////////////////////////////////////////*/
-footer a:nth-of-type(1) img {
-    width: 130px;
-    height: 130px;     
-}
-
-                        /* Footer Logotype Afpa */
-/*/////////////////////////////////////////////////////////////////////////////*/
-footer a:nth-of-type(3) img {
-    width: 130px;
-    height: 130px;     
-}
-
-
-                        /* Bouton */
-/*/////////////////////////////////////////////////////////////////////////////*/
-.bouton {
+.center{
+    display: flex;
+    align-items: center !important;
+    justify-content: center !important;
     margin: auto;
-    border-radius: 10px;
 }
-
-.bg-primary{
-    background-color: rgb(239, 119, 87) !important;
-    height: 120px;
+.bouton-align{
+    display: flex;
+    justify-content: space-evenly;
 }
-
-/* Timur
-.btn-secondary{
-    background-color: #B2ECF1 !important;
+.bouton-align>div{
+    display: flex;
 }
+/**
+*   css de popperjs
 */
-
-.btn-info {
-    background-color: #d75432!important;
-    border-color: #d75432!important;    
-} 
-
-/* Samy
-.btn-info{
-    background-color: rgb(255, 154, 128) !important;
-    border-color: #ffbcab !important;
-}*/
-
-.btn-success{
-    background-color: #8ec641 !important;
-    border-color: #B0E469 !important;
+.popup{
+    width: auto;
 }
-
-.btn {
-	border-radius: 10px 0 10px 0;
-	border: 1px;
-	box-shadow: 0 0 0 rgba(0,0,0,0.3);
-	transition: 0.3s ease-out all;
+#tooltip {
+    background: #333;
+    color: white;
+    font-weight: bold;
+    padding: 4px 8px;
+    font-size: 13px;
+    border-radius: 4px;
+    display: none;
 }
-.btn:hover {
-	box-shadow: 2px 2px 2px rgba(0,0,0,0.7);
+#tooltip[data-show] {
+    display: block;
 }
-
-
+#tooltip[data-popper-placement^='top'] > #arrow {
+    bottom: -4px;
+}
+  
+#tooltip[data-popper-placement^='bottom'] > #arrow {
+    top: -4px;
+}
+  
+#tooltip[data-popper-placement^='left'] > #arrow {
+    right: -4px;
+}
+  
+#tooltip[data-popper-placement^='right'] > #arrow {
+    left: -4px;
+}
+#arrow,
+#arrow::before {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: inherit;
+}
+#arrow {
+    visibility: hidden;
+  }
+#arrow::before {
+    visibility: visible;
+    content: '';
+    transform: rotate(45deg);
+}
