--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">        
     <title>{% block title %}{% endblock %}</title><!--  Titre de la page dynamique  -->
     <link rel="stylesheet" href="https://bootswatch.com/5/yeti/bootstrap.css"><!--  Thème Bootstrap  -->
-    <link rel="stylesheet" href="style.css"><!--  Notre feuille de style  -->
-    <link rel="stylesheet" href="./fontawesome/css/all.min.css"><!--  Font Awesome  -->
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/png" href="./img/site/logo.ico"/><!--  Notre logo  -->
-    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="/style.css"><!--  Notre feuille de style  -->
+    <link rel="stylesheet" href="/fontawesome/css/all.min.css"><!--  Font Awesome  -->
+    <link rel="shortcut icon" type="image/png" href="/img/site/logo.ico"/><!--  Notre logo  -->
     {% block stylesheets %}{% endblock %}<!--  Nos feuilles de styles propres à chaque page seront surchargées ici  -->
 </head>
 
@@ -16,19 +14,16 @@
     <header><!--  Dans notre header, il y a uniquement notre navbar  -->  
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            
-            <figure class="logotype">
-                    <img src="./img/site/logotypeSite.png" alt="Logotype du site">
-            </figure> 
-            <a class="navbar-brand" href="{{ path('accueil') }}">Pagué</a>
-            <!--a class="navbar-brand" href="{#{ path('accueil') }#}"> <img class="logo" src="./img/site/logo.png" alt="logo du site"> Pagué</a-->
+            <a class="navbar-brand" href="{{ path('accueil') }}"> 
+                <img class="logo" id="logo" src="/img/site/logo.png" alt="logo du site">
+             Pagué</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto"><!--  cette liste est classé par droits d'accès  -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('recherche') }}">Recherche</a>
+                        <a class="nav-link" href="{{ path('passage_a_gue_index') }}">Recherche</a>
                     </li>
                     {% if is_granted('ROLE_GESTIONNAIRE') %}
                     <li class="nav-item">
@@ -81,21 +76,21 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer><!--  Notre footer contient les liens vers d'autres sites, et vers les informations "secondaires"  -->        
+    <footer><!--  Notre footer contient les liens vers d'autres sites, et vers les informations "secondaires"  -->
         <div>
             <a href="#">
                 <figure>
-                    <img src="./img/site/MIIAM_logo2.jpg" alt="Logotype MIIAM">
+                    <img src="/img/site/MIIAM_logo2.jpg" alt="Logotype MIIAM">
                 </figure>
             </a>
             <a href="https://www.cerema.fr/" >
                 <figure>
-                    <img src="./img/site/LogoCerema_horizontal.svg" alt="Logotype Cerema">
+                    <img src="/img/site/LogoCerema_horizontal.svg" alt="Logotype Cerema">
                 </figure>
             </a>
             <a href="https://www.afpa.fr/" >
                 <figure>
-                    <img src="./img/site/LogoAfpa.jpg" alt="Logotype Afpa">
+                    <img src="/img/site/LogoAfpa.jpg" alt="Logotype Afpa">
                 </figure>
             </a>
         </div>
@@ -103,11 +98,10 @@
             <a href="{{ path('portail') }}" class="btn btn-secondary bouton">Portail technique</a>
             <a href="{{ path('mention') }}" class="btn btn-secondary bouton">Mentions légales</a>
             <a href="{{ path('contact') }}" class="btn btn-info bouton">Contactez-nous!</a>
-        </div>       
+        </div>
+        
     </footer>
     <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script><!--  Script js bootstrap  -->
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="./js/base.js"></script>
-</body>    
+    {% block script %}{% endblock %}
+</body>     
 </html>
-
