--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -14,24 +14,27 @@
         
         {{ form_start(form) }}
         <h1>Inscription</h1>
-        {{ form_row(form.email, { 'label': "Email *", 'attr': { 'placeholder': "Email" , 'autofocus' : 'enabled'}}) }}
+        {{ form_row(form.email, { 'label': "Email *", 'attr': { 'placeholder': "Email" , 'autofocus' : 'enabled', required: 'required'}}) }}
         
         <i id="button" aria-describedby="tooltip" class="fas fa-info-circle info"></i>
         <div id="tooltip" role="tooltip" class="popup">
             <div id="arrow" data-popper-arrow></div>
             le mot de passe doit faire au moins 8 caractères, avec au moins 1 majuscule, 1 minuscule, et 1 caractère spécial parmis @ $ ! % * . ? &.
         </div>
-        {{ form_row(form.password, { 'label': "Mot de passe *", 'attr': { 'placeholder': "Mot de passe"}}) }}
-        {{ form_row(form.checkPassword, { 'label': "Confrimez le mot de passe *", 'attr': { 'placeholder': "Confirmez le mot de passe"}}) }}
-        {{ form_row(form.pseudoUtilisateur, { 'label': "Pseudonyme *",'attr': { 'placeholder': "Le nom qui sera affiché"}}) }}
-        {{ form_row(form.nomUtilisateur, { 'label': "Nom *",'attr': { 'placeholder': "Nom"}}) }}
-        {{ form_row(form.prenomUtilisateur, { 'label': "Prénom *",'attr': { 'placeholder': "Prénom"}}) }}
+        {{ form_row(form.password, { 'label': "Mot de passe *", 'attr': { 'placeholder': "Mot de passe", required: 'required'}}) }}
+        {{ form_row(form.checkPassword, { 'label': "Confrimez le mot de passe *", 'attr': { 'placeholder': "Confirmez le mot de passe", required: 'required'}}) }}
+        {{ form_row(form.pseudoUtilisateur, { 'label': "Pseudonyme *",'attr': { 'placeholder': "Le nom qui sera affiché", required: 'required'}}) }}
+        {{ form_row(form.nomUtilisateur, { 'label': "Nom *",'attr': { 'placeholder': "Nom", required: 'required'}}) }}
+        {{ form_row(form.prenomUtilisateur, { 'label': "Prénom *",'attr': { 'placeholder': "Prénom", required: 'required'}}) }}
         {{ form_row(form.photoUtilisateur, { 'label': "Photo",'attr': { 'placeholder': "Ajoutez une photo "}}) }}
         <a class="petit-lien" href="{{ path('app_login') }}">Déjà inscrit? Je me connecte</a><br>
         <button type="submit" class="btn btn-lg btn-success center">inscription</button>
         {{ form_end(form) }}
           
     </div>
+{% endblock %}
+
+{% block script %}
     <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="./js/form.js"></script>
+    <script src="/js/form.js"></script>
 {% endblock %}
