--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -49,7 +49,7 @@
 
         <br>
         <button class="btn btn-lg btn-success center" type="submit">Connexion</button><br>
-        <a class="btn center" href="{{ path('app_registration') }}">Inscription</a>
+        <a class="btn btn-secondary center" href="{{ path('app_registration') }}">Inscription</a>
     </form>
 </div>
 
