--- a/templates/passage/new.html.twig
+++ b/templates/passage/new.html.twig
@@ -12,6 +12,6 @@
 
         {{ include('passage/_form.html.twig') }}
 
-        <a href="{{ path('passage_a_gue_index') }}" class="btn">Retour</a>
+        <a href="{{ path('passage_a_gue_index') }}" class="btn btn-secondary">Retour</a>
     </div>
 {% endblock %}
