--- a/templates/passage/edit.html.twig
+++ b/templates/passage/edit.html.twig
@@ -13,7 +13,7 @@
 
         {{ include('passage/_form.html.twig', {'button_label': 'Modifier'}) }}
         {{ include('passage/_delete_form.html.twig') }}
-        <a href="{{ path('passage_a_gue_index') }}">Retour</a>
+        <a href="{{ path('passage_a_gue_index') }}" class="btn btn-secondary">Retour</a>
         
     </div>
 {% endblock %}
