--- a/templates/type_ouvrage/_delete_form.html.twig
+++ b/templates/type_ouvrage/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('type_ouvrage_delete', {'id': type_ouvrage.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('type_ouvrage_delete', {'id': type_ouvrage.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cet élément?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ type_ouvrage.id) }}">
     <button class="btn btn-danger">Supprimer</button>
 </form>
