--- a/public/css/form.css
+++ b/public/css/form.css
@@ -74,8 +74,19 @@ form>div{
     transform: rotate(45deg);
 }
   
+/*
+.equipements{
+    width: 1000px;
+    display: flex;
+    flex-flow: row wrap;
+}
 
+.equipements span{
+    
+    width: 50%;
+}
 
+*/
 
 
 
